[FE] Resource Center LP Trending | External Resource > Layout issues

--- a/src/theme/css/frontend/rc/_cards.scss
+++ b/src/theme/css/frontend/rc/_cards.scss
@@ -32,5 +32,26 @@
     .post-desc {
       color: inherit;
     }
+
+    .post-title {
+      @apply text-px32 leading-px42 tracking-px_05;
+
+      @screen lg {
+        font-size: 2.125rem;
+        line-height: 2.75rem;
+      }
+    }
+
+    .post-desc {
+      @apply text-px16 leading-px24;
+
+      @screen md {
+        @apply leading-px22;
+      }
+
+      @screen lg {
+        @apply text-px20 leading-px28;
+      }
+    }
   }
 }
